[gd_scene load_steps=14 format=2]

[ext_resource path="res://graphics/particles/pngegg.png" type="Texture" id=1]
[ext_resource path="res://graphics/light_.png" type="Texture" id=2]
[ext_resource path="res://Mobs/SPEffect.gd" type="Script" id=3]
[ext_resource path="res://audio/attack/kirakira.mp3" type="AudioStream" id=4]
[ext_resource path="res://graphics/particles/smoke/4.png" type="Texture" id=5]
[ext_resource path="res://graphics/particles/smoke/5.png" type="Texture" id=6]
[ext_resource path="res://graphics/particles/smoke/2.png" type="Texture" id=7]
[ext_resource path="res://graphics/particles/smoke/3.png" type="Texture" id=8]
[ext_resource path="res://graphics/particles/smoke/1.png" type="Texture" id=9]
[ext_resource path="res://graphics/particles/smoke/0.png" type="Texture" id=10]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 318.1
angle_random = 0.34

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "smoke",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="SPEffect" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
amount = 11
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="smoke" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "smoke"
speed_scale = 1.5

[node name="Collider" type="Area2D" parent="." groups=[
"SP",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.3
color = Color( 0.415686, 0.2, 0.592157, 1 )
energy = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "SFX"

[connection signal="area_entered" from="Collider" to="." method="_on_Collider_area_entered"]
[connection signal="area_exited" from="Collider" to="." method="_on_Collider_area_exited"]
[connection signal="body_entered" from="Collider" to="." method="_on_Collider_body_entered"]
[connection signal="body_exited" from="Collider" to="." method="_on_Collider_body_exited"]
